--- a/manifest.json
+++ b/manifest.json
@@ -7,16 +7,23 @@
     },
 
     "background": {
-        "service_worker": "script/service-worker.js",
-        "type": "module"
+        "service_worker": "script/service-worker.js"
     },
-
+    "content_scripts": [
+        {
+            "matches": ["<all_urls>"],
+            "js": ["script/timer.js"]
+        }
+    ],
     "action": {
         "default_popup": "index.html"
     },
     "permissions": [
         "scripting",
-        "windows"
+        "windows",
+        "activeTab",
+        "webNavigation",
+        "storage"
     ],
     "host_permissions": [
         "http://*/*",
