--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,9 @@
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
-            "js": ["script/timer.js"]
+            "js": [
+                "script/timer.js"
+            ]
         }
     ],
     "action": {
